--- a/views/index4.ejs
+++ b/views/index4.ejs
@@ -23,16 +23,18 @@
         <div class="row">
             <div class="col col-12 col-sm-6 col-md-4"></div>
             <div class="col col-12 col-sm-6 col-md-4">
+                <form action="/read" method="POST">
                 <table class="table">
-                    <tr><td>Title</td><td><input type="text"class="form-control"></td></tr>
-                    <tr><td>Author</td><td><input type="text"class="form-control"></td></tr>
-                    <tr><td>Publisher</td><td><textarea col="4"rows="4" class="form-control"></textarea></td></tr>
-                    <tr><td>Date of publishing</td><td><input type="date" class="form-control"></td></tr>
-                    <tr><td>DistributorName</td><td><input type="text"class="form-control"></td></tr>
-                    <tr><td>Price</td><td>Rs/-<input type="number" class="form-control"></td></tr>
-                    <tr><td>Description</td><td><textarea col="4"rows="4" class="form-control"></textarea></td></tr>
-                    <tr><td></td><td><button class="btn btn-info">SUBMIT</button></td></tr>
+                    <tr><td>Title</td><td><input type="text"class="form-control" name="name"></td></tr>
+                    <tr><td>Author</td><td><input type="text"class="form-control" name="author"></td></tr>
+                    <tr><td>Publisher</td><td><textarea col="4"rows="4" class="form-control"name="p"></textarea></td></tr>
+                    <tr><td>Date of publishing</td><td><input type="date" class="form-control"name="d"></td></tr>
+                    <tr><td>DistributorName</td><td><input type="text"class="form-control" name="n"></td></tr>
+                    <tr><td>Price</td><td>Rs/-<input type="number" class="form-control"name="p"></td></tr>
+                    <tr><td>Description</td><td><textarea col="4"rows="4" class="form-control" name="de"></textarea></td></tr>
+                    <tr><td></td><td><button type="submit"class="btn btn-info">SUBMIT</button></td></tr>
                 </table>
+                <form>
             </div>
             <div class="col col-12 col-sm-6 col-md-4"></div>
         </div>
